alloy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: alloy
          image: grafana/alloy:latest
          command: ["/bin/alloy"]
          args: ["run", "/etc/alloy/config.alloy"]
          volumeMounts:
            - name: docker-sock
              mountPath: /var/run/docker.sock
            - name: alloy-config
              mountPath: /etc/alloy
      volumes:
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
        - name: alloy-config
          configMap:
            name: alloy-config
