app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: "ghcr.io/gapidobri/devops-k8s:master"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              port: 8080
              path: /healthz
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: postgres-secret
          secret:
            secretName: postgres-secret
