grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: observability
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:12.2.1
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: data
            - mountPath: /etc/grafana/provisioning
              name: config
      volumes:
        - name: config
          configMap:
            name: grafana-config
            items:
              - key: datasources.yaml
                path: ./datasources/datasources.yaml
              - key: default.yaml
                path: ./dashboards/default.yaml
              - key: dashboard.json
                path: ./dashboards/dashboard.json
        - name: data
          persistentVolumeClaim:
            claimName: grafana-pvc
