app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  selector:
    app: app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
