grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: observability
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - grafana.locahost
    - grafana.devops.gapi
    - grafana.devops.gapi.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: grafana
          port: 3000
